--- a/index.html
+++ b/index.html
@@ -395,6 +395,12 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" defer></script>
   <script src="js/custom.js" defer></script>
   <script src="js/nowy.js" defer></script>
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+      const elements = document.querySelectorAll(".animate-on-scroll");
+      elements.forEach(el => el.classList.add("visible"));
+  });
+</script>
 </body>
 </html>
 
